--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test/*.test.js",
-    "test-watch": "mocha test/*.test.js -w"
+    "test-watch": "mocha test/*.test.js -w",
+    "eslint": "eslint *.js lib/* test/*"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "chai": "^1.9.1",
+    "eslint": "^0.7.4",
     "mocha": "^1.20.1",
     "proxyquire": "^1.0.1",
     "sinon": "^1.10.3",
